--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "color-hash": "^1.1.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
