--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production PORT=80 pm2 start app.js",
-    "dev": "nodemon app",
-    "test": "cross-env pm2 start server.js"
+    "dev": "cross-env PORT=8080 nodemon app",
+    "awsDev": "cross-env PORT=80 nodemon app"
   },
   "author": "dypark",
   "license": "MIT",
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.12.3",
