--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pm2": "^4.5.6",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
