--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "dypark",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.917.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
@@ -22,6 +23,7 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
